# bookshelf

./: .editorconfig  .env  .env.development  .env.example  .gitignore  .ignore  .pre-commit-config.yaml  Cargo.toml  Makefile  README.md  docker-compose.yml  requirements.txt
.github/workflows/: api.yml  ui.yml
api/: Cargo.toml  build.rs
api/src/: config.rs  container.rs  endpoints.rs  main.rs  responders.rs  telemetry.rs  version.rs
api/src/endpoints/: storages.rs  telemetry.rs  users.rs
api/src/endpoints/storages/: create.rs  delete.rs  get.rs  list.rs  main.go  update.rs  upload_file.rs
application/: Cargo.toml
application/src/: book.rs  commands.rs  cursor.rs  lib.rs  macros.rs  storage.rs  user.rs
application/src/storage/: diagram.plantuml  engine.rs  entity.rs  repository.rs  service.rs
application/src/storage/engine/: fs.rs
application/src/storage/repository/: pg.rs
application/src/user/: entity.rs  service.rs
application/src/user/repository/: pg.rs
development/: keycloak.dockerfile  test_realm.json
development/caddy/: Caddyfile
development/kanidm/: setup-after.sh  setup-before.sh  setup-oauth.sh  setup.dockerfile
docs/: entities.plantuml
entity/src/: book.rs  lib.rs  prelude.rs  shelf.rs  storage.rs  user.rs
migration/: Cargo.toml
migration/src/: m20220101_000001_create_table.rs
migrations/: 20230804154753_initialize.sql
migrations/2025-11-29-163954-0000_init/: down.sql  up.sql
src/: config.rs  main.rs  schema.rs  sqlite.rs  telemetry.rs  users.rs  version.rs
ui/: .env.development  .eslintrc.yaml  jest.config.ts  package.json  tsconfig.test.json  vite.config.ts
ui/mock/: mocks.config.js
ui/mock/mocks/: collections.json
ui/mock/mocks/routes/: books.js  storages.js
ui/src/: App.tsx  index.tsx  main.tsx
ui/src/app/: index.css  index.tsx
ui/src/app/providers/: index.ts  types.tsx  with-auth.tsx  with-config-provider.tsx  with-router.tsx
ui/src/entities/book/: index.ts
ui/src/entities/book/model/: index.ts
ui/src/entities/book/ui/: index.ts
ui/src/entities/book/ui/book-card/: functions.test.ts  functions.tsx  index.tsx  styles.css
ui/src/entities/book/ui/book-row/: index.tsx
ui/src/entities/storage/: index.ts
ui/src/entities/storage/model/: index.ts
ui/src/entities/storage/ui/: index.ts
ui/src/entities/storage/ui/storage-row/: index.tsx
ui/src/pages/: index.tsx
ui/src/pages/book/: index.tsx
ui/src/pages/main/: index.tsx
ui/src/pages/storage-list/: index.tsx
ui/src/shared/api/: abstract.ts  book.ts  index.ts  storage.ts  types.ts
ui/src/shared/config/: index.ts
ui/src/shared/effector/: index.ts
ui/src/shared/i18n/: index.tsx
ui/src/shared/i18n/locales/: ru.json
ui/src/shared/mock/: index.ts  types.ts  utils.ts
ui/src/shared/mock/book/: index.ts
ui/src/shared/mock/storage/: index.ts
