[package]
name = "api"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.89"
axum = { version = "0.8.4", features = ["macros"] }
env_logger = { version = "0.11.8", default-features = false, features = ["kv"] }
log = { version = "0.4.28", features = ["kv", "kv_std"] }
oauth2 = "4.4.2"
reqwest = "0.11"
serde = { version = "1.0.219", features = ["derive"] }
thiserror = "2.0.17"
tokio = { version = "1.46.1", features = ["macros", "rt-multi-thread"] }
libsqlite3-sys = { version = "0.35", features = ["bundled"] }
