[package]
name = "bookshelf"
description = "The application to store and read all your books in one place"
version = "0.1.0"
edition = "2024"

[dependencies]
diesel = { version = "2.2.0", features = ["sqlite", "returning_clauses_for_sqlite_3_35"] }
diesel-async = { version = "0.7.4", features = ["sqlite", "deadpool", "sync-connection-wrapper", "async-connection-wrapper"] }
diesel_migrations = "2.3.0"
dotenvy = "0.15.7"
axum = { version = "0.8.4", features = ["macros"] }
env_logger = { version = "0.11.8", default-features = false, features = ["kv"] }
log = { version = "0.4.28", features = ["kv", "kv_std"] }
tokio = { version = "1.46.1", features = ["macros", "rt-multi-thread", "signal"] }
libsqlite3-sys = { version = "0.35", features = ["bundled"] }
anyhow = "1.0.102"
clap = { version = "4.5.60", features = ["derive"] }

[package.metadata.cargo-machete]
ignored = ["libsqlite3-sys"]

