[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
application = { path = "../application"}
actix-cors = "0.6.4"
actix-web = "4.3.1"
actix-web-middleware-keycloak-auth = "0.4.0"
anyhow = "1.0.71"
chrono = { version = "0.4.26", features = ["serde"] }
dotenv = "0.15.0"
envy = "0.4.2"
serde = { version = "1.0.163", features = ["derive"] }
serde_with = "3.0.0"
serde_json = "1.0.104"
sqlx = { version = "0.7.1", features = [
    "runtime-tokio",
    "postgres",
    "macros",
    "uuid",
    "chrono",
    "json",
] }
tracing = { version = "0.1.37", features = ["log-always"] }
tracing-actix-web = "0.7.5"
tracing-bunyan-formatter = "0.3.7"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
uuid = { version = "1.3.3", features = ["serde", "v4", "fast-rng"] }
actix-multipart = "0.6.1"
tokio = { version = "1.33.0", features = ["fs"] }
derive_more = "0.99.17"

[build-dependencies]
anyhow = "1.0.71"
