[package]
name = "application"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.72"
anyhow = "1.0.71"
chrono = { version = "0.4.26", features = ["serde"] }
sea-orm = { version = "0.11.3", features = ["sqlx-postgres", "runtime-actix-native-tls", "with-chrono", "macros", "with-uuid"] }
serde = { version = "1.0.163", features = ["derive"] }
serde_with = "3.0.0"
tokio = { version = "1.29.1", features = ["macros"] }
thiserror = "1.0.43"
uuid = { version = "1.3.3", features = ["serde", "v4", "fast-rng"] }
parameterized_test = "0.2.1"
scopeguard = "1.2.0"