[package]
name = "application"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.72"
anyhow = "1.0.71"
chrono = { version = "0.4.26", features = ["serde"] }
serde = { version = "1.0.163", features = ["derive"] }
serde_with = "3.0.0"
serde_json = "1.0.104"
tokio = { version = "1.29.1", features = ["macros"] }
thiserror = "1.0.43"
uuid = { version = "1.3.3", features = ["serde", "v4", "fast-rng"] }
parameterized_test = "0.2.1"
parse-display = "0.8.2"
scopeguard = "1.2.0"
sqlx = { version = "0.7.1", features = [
    "runtime-tokio",
    "postgres",
    "macros",
    "uuid",
    "chrono",
    "json",
] }